# eval-harness

./: .gitignore  CHANGELOG.md  README.md  eval-harness-spec-v0.3.md  eval-harness-spec.md  pyproject.toml  spec-v0.2-diff.md  spec-v0.3-diff.md  utils.py
adapters/: __init__.py  anthropic.py  base.py  keyword_judge.py  mock.py  ollama.py  openai.py  replay.py  scripted.py
agent/: __init__.py  loop.py  tools.py
data/: holdout.sha256  registry.sha256  sample_categorization.jsonl  sample_holdout.jsonl
docs/: executive_summary.md  interview_brief.md  methodology.md  runbook_task_a.md  runbook_v0.3_step7.md
eval/: __init__.py  adversarial.py  bradley_terry.py  gate.py  judge.py  metrics.py  runner.py  stats.py  tierb.py  trajectory.py
rubrics/: set3_entity_annotation.md  set4_rag_question_authoring.md  set5_trajectory_rubric.md
scripts/: build_golden.py  category_distribution_check.py  ci_trajectory_gate.py  example_agent_run.py  example_holdout.py  example_run.py  example_task_b.py  example_tierb.py  judge_cost_budget.py  lock_adversarial.py  lock_holdout.py  lock_registry.py  preflight_70b_timing.py  run_eval.py  sample_stratified_articles.py  score_results.py  tierb_nightly.py  validate_annotations.py
tasks/: __init__.py  base.py  categorization.py  summarization.py
tests/: test_adversarial.py  test_agent_loop.py  test_agent_tools.py  test_bradley_terry.py  test_gate.py  test_judge.py  test_metrics.py  test_replay.py  test_runner.py  test_stats.py  test_tierb.py  test_trajectory.py  test_utils.py
web/: README.md  mdx-components.tsx  package-lock.json  (+1 more)
(+16 files in other folders)
